--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 <IfModule mod_rewrite.c>
     Options +FollowSymLinks
     RewriteEngine on
-    RewriteBase /ci
+    RewriteBase /IT342-login-attempts
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?$1 [L]
